# extractoxpy

./: .gitignore  LICENSE.txt  README.md  pixi.lock.old  pyproject.toml
src/extractoxpy/: __init__.py  extr_ice.py  random_function.py
src/extractoxpy/checks/: __init__.py  internet.py
tests/: Interactive-1.ipynb  ice_tests.py  test_ice.py
